# waterui

./: .gitignore  Cargo.toml  README.md  swift_bindgen.sh
bindgen/: Cargo.toml  swift.sh
components/form/: Cargo.toml
components/form/src/: lib.rs  slider.rs  (+3 more)
components/layout/: Cargo.toml
components/layout/src/: grid.rs  lib.rs  overlay.rs  scroll.rs  spacer.rs  stack.rs
components/media/: Cargo.toml
components/navigation/: Cargo.toml
components/text/: Cargo.toml
core/: Cargo.toml
core/src/: animation.rs  color.rs  env.rs  extract.rs  ffi.rs  handler.rs  id.rs  lib.rs  macros.rs  plugin.rs  shape.rs  view.rs
core/src/-ffi/: animation.rs
core/src/components/: anyview.rs  dynamic.rs  label.rs  metadata.rs  mod.rs  native.rs
core/src/ffi/: action.rs  animation.rs  macros.rs  mod.rs
data/: Cargo.toml
data/src/: database.rs  lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
ffi/: Cargo.toml
ffi/src/: array.rs  closure.rs  lib.rs  macros.rs  ty.rs
kit/: Cargo.toml
kit/src/: lib.rs
plugins/i18n/: Cargo.toml  README.md
plugins/i18n/src/: lib.rs  std_on.rs
plugins/icon/: Cargo.toml  README.md
plugins/icon/src/: lib.rs  std_on.rs
reactive/: Cargo.toml  README.md
reactive/src/: binding.rs  channel.rs  collection.rs  constant.rs  debug.rs  ext.rs  ffi.rs  filter.rs  lib.rs  mailbox.rs  map.rs  stream.rs  utils.rs  watcher.rs  zip.rs
src/: README.md  attributed_string.rs  background.rs  binding.rs  ext.rs  ffi.rs  filter.rs  html.rs  lib.rs  macros.rs  reactive.rs  task.rs  utils.rs  view.rs
src/component/: badge.rs  button.rs  calendar.rs  divder.rs  focu.rs  foreach.rs  image.rs  list.rs  mod.rs  progress.rs  stack.rs  style.rs  table.rs  text.rs  views.rs
src/widget/: condition.rs  error.rs  mod.rs  suspense.rs
utils/str/: Cargo.toml  README.md
utils/task/: Cargo.toml  README.md
waterdata/: Cargo.toml
waterui/: Cargo.toml  build.rs  cbindgen  cbindgen.toml  ffi.h  waterui.h
waterui-bridge/: Cargo.toml
waterui-bridge/src/: lib.rs
waterui-core/: Cargo.toml  ffi.h
waterui-core/src/: anyview.rs  async_view.rs  attributed_string.rs  binding.rs  dynamic_view.rs  env.rs  error.rs  extract.rs  handler.rs  layout.rs  lib.rs  macros.rs  modifier.rs  reactive.rs  utils.rs  view.rs  window.rs
waterui-core/src/component/: alert.rs  button.rs  gesture.rs  image.rs  menu.rs  mod.rs  navigation.rs  stack.rs  text.rs  text_field.rs
waterui-core/src/components/: anyview.rs  dynamic.rs  label.rs  metadata.rs  mod.rs  native.rs  text.rs
waterui-core/src/ffi/: array.rs  buf.rs  mod.rs  utils.rs
waterui-core/src/modifier/: frame.rs  mod.rs
waterui-derive/: Cargo.toml
waterui-derive/src/: lib.rs  reactive.rs
waterui-ffi/: Cargo.toml  cbindgen.toml  waterui.h
waterui-ffi/src/: action.rs  animation.rs  app.rs  array.rs  binding.rs  bridge.rs  closure.rs  computed.rs  error.rs  lib.rs  macros.rs  ty.rs  watcher.rs
waterui-ffi/src/component/: button.rs  color.rs  divider.rs  dynamic.rs  each.rs  icon.rs  image.rs  lazy.rs  list.rs  metadata.rs  mod.rs  navigation.rs  picker.rs  progress.rs  slider.rs  stack.rs  stepper.rs  tabs.rs  text.rs  text_field.rs  toggle.rs  with_env.rs
waterui-ffi/src/component/layout/: grid.rs  mod.rs  overlay.rs  scroll.rs  spacer.rs  stack.rs
waterui-ffi/src/component/metadata/: env.rs  frame.rs  mod.rs  padding.rs
waterui-ffi/src/component/picker/: color.rs  mod.rs
waterui-ffi/src/component/shape/: mod.rs
waterui-ffi/src/modifier/: padding.rs
waterui-i18n/: Cargo.toml
waterui-i18n/src/: lib.rs
waterui-icon/: Cargo.toml
waterui-icon/src/: lib.rs  std_on.rs
waterui-kit/: Cargo.toml
waterui-lazy/: Cargo.toml
waterui-lazy/src/: filter.rs  impls.rs  lib.rs  map.rs
waterui-macro/: Cargo.toml
waterui-macro/src/: lib.rs
waterui-reactive/: Cargo.toml
waterui-reactive/src/: binding.rs  cached.rs  compute.rs  constant.rs  container.rs  flatten.rs  lib.rs  mailbox.rs  map.rs  mpsc.rs  reactive.rs  subscriber.rs  watcher.rs  zip.rs
waterui-reactive2/: Cargo.toml
waterui-reactive2/src/: binding.rs  compute.rs  constant.rs  lib.rs  map.rs  watcher.rs
waterui-str/: Cargo.toml
waterui-str/src/: impls.rs  lib.rs  shared.rs
waterui-task/: Cargo.toml
waterui-task/src/: apple.rs  lib.rs  main_value.rs  timer.rs
waterui-util/: Cargo.toml
waterui-util/src/: lib.rs
waterui-view/: Cargo.toml
waterui-view/src/: anyview.rs  async_view.rs  dynamic_view.rs  env.rs  error.rs  lib.rs  macros.rs  view.rs
waterui/src/: animation.rs  app.rs  async_view.rs  attributed_string.rs  binding.rs  bridge.rs  color.rs  env.rs  ffi.rs  filter.rs  html.rs  id.rs  layout.rs  lib.rs  link.rs  macros.rs  modifier.rs  mpsc.rs  navigation.rs  renderer.rs  tab.rs  task.rs  transfer.rs  utils.rs  vdom.rs  view.rs  widget.rs  window.rs
waterui/src/app/: bridge.rs  mod.rs
waterui/src/component/: alert.rs  anyview.rs  async_image.rs  async_view.rs  badge.rs  button.rs  color_picker.rs  condition.rs  date_picker.rs  dynamic.rs  each.rs  focu.rs  foreach.rs  frame.rs  gesture.rs  image.rs  list.rs  locale.rs  metadata.rs  mod.rs  picker.rs  progress.rs  radio.rs  remote_image.rs  slider.rs  stack.rs  stepper.rs  style.rs  table.rs  text.rs  text_field.rs  toggle.rs  views.rs
waterui/src/component/form/: mod.rs  slider.rs  stepper.rs  text_field.rs  toggle.rs
waterui/src/component/layout/: grid.rs  mod.rs  overlay.rs  scroll.rs  stack.rs
waterui/src/component/navigation/: mod.rs  tab.rs
waterui/src/component/picker/: mod.rs  multi_date.rs
waterui/src/component/rich_text/: attributed.rs  mod.rs
waterui/src/component/shape/: mod.rs
waterui/src/ffi/: app.rs  array.rs  binding.rs  bridge.rs  buf.rs  computed.rs  error.rs  mod.rs  ty.rs  utils.rs  visitor.rs
waterui/src/ffi/components/: anyview.rs  button.rs  field.rs  mod.rs  remoteimg.rs  stack.rs  text.rs
waterui/src/ffi/modifier/: mod.rs  padding.rs
waterui/src/modifier/: background.rs  mod.rs  padding.rs  task.rs  with.rs
waterui/src/widget/: async_view.rs  condition.rs  date_picker.rs  error.rs  image.rs  mod.rs  suspense.rs
(+53 files in other folders)
