
[workspace]
members = ["core", "reactive", "kit", "components/*", "utils/*", "bindgen"]
resolver = "2"

[lib]
crate-type = ["cdylib"]

[package]
name = "waterui"
edition = "2024"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
waterui-core = { path = "core" }
waterui-task = { path = "utils/task" }
waterui-str = { path = "utils/str" }
waterui-text = { path = "components/text" }
waterui-media = { path = "components/media" }
waterui-layout = { path = "components/layout" }
waterui-reactive = { path = "reactive" }
waterui-navigation = { path = "components/navigation" }
waterui = { path = "." }
serde = { version = "1.0", default-features = false }
uniffi = "0.29"

[dependencies]
waterui-reactive.workspace = true
waterui-core.workspace = true
waterui-str.workspace = true
waterui-layout.workspace = true
waterui-text.workspace = true
waterui-media.workspace = true
waterui-navigation.workspace = true
waterui-task.workspace = true
uniffi.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
std = []
all = ["serde", "std"]
serde = ["dep:serde", "waterui-core/serde"]
