[package]
name = "waterui-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3"
waterui-str.workspace = true
waterui-reactive.workspace = true
waterui-ffi.workspace = true
[dependencies.anyhow]
version = "1.0"
default-features = false

[dependencies.smol]
version = "2.0"
default-features = false

[dependencies.serde]
version = "1.0.219"
optional = true
default-features = false

[features]
std = []
serde = ["dep:serde", "waterui-str/serde"]
