[package]
name = "waterui-core"
version = "0.1.0"
edition = "2021"

[dependencies]
waterui-str.workspace = true
waterui-reactive.workspace = true
waterui-task.workspace = true
paste = "1.0"

[dependencies.anyhow]
version = "1.0"
default-features = false

[dependencies.smol]
version = "2.0"
default-features = false

[dependencies.serde]
version = "1.0"
optional = true
default-features = false

[dependencies.uniffi]
workspace = true
optional = true

[features]
default = ["ffi"]
std = []
ffi = ["std", "dep:uniffi"]
serde = ["dep:serde", "waterui-str/serde"]
