[package]
name = "waterui-core"
version = "0.1.0"
edition = "2021"

[dependencies]
waterui-reactive = { path = "../waterui-reactive" }

[dependencies.async-executor]
version = "1.11.0"
default-features = false
optional = true

[features]
default = ["default-executor"]
default-executor = ["dep:async-executor"]
std = []
