[package]
name = "waterui-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-channel = "2.3"
waterui-reactive = { path = "../waterui-reactive" }
waterui-str = { path = "../waterui-str" }


[dependencies.smol]
version = "2.0"
default-features = false

[features]
std = []
