[package]
name = "waterui-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
waterui = { path = "../waterui" }
waterui-reactive = { path = "../waterui-reactive" }
waterui-bridge = { path = "../waterui-bridge" }
waterui-str = { path = "../waterui-str" }


[build-dependencies]
cbindgen = "0.26.0"