[package]
name = "waterui-i18n"
version = "0.1.0"
edition = "2021"

[dependencies]
waterui = { path = "../waterui" }

waterui-core = { path = "../waterui-core" }
waterui-reactive = { path = "../waterui-reactive" }
waterui-str = { path = "../waterui-str" }

[dependencies.async-fs]
version = "2.1.2"
optional = true

[dependencies.futures-lite]
version = "2.3.0"
optional = true

[dependencies.thiserror]
version = "1.0.63"
optional = true


[dependencies.toml]
version = "0.8.19"
optional = true



[features]
default = ["std"]
std = ["async-fs","futures-lite","thiserror","toml"]