[package]
name = "waterui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waterui-reactive = { path = "../waterui-reactive" }
waterui-core = { path = "../waterui-core" }
waterui-str = { path = "../waterui-str" }
async-gcd = { path = "../../async-gcd"}
async-channel = "2.2.1"
time = "0.3.36"
url = "2.5.2"
bitflags = "2.6.0"

[dependencies.serde]
version = "1.0.193"
default-features = false
features = ["derive"]
optional = true

[features]
default = ["all"]
std = []
all = ["serde"]
serde = ["dep:serde"]
