[package]
name = "waterui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waterui-reactive = { path = "../waterui-reactive" }
waterui-core = { path = "../waterui-core" }
waterui-str = { path = "../waterui-str" }
main-executor = { path = "../../main-executor"}
async-channel = "2.2.1"
time = "0.3.36"
bitflags = "2.6.0"

[dependencies.serde]
version = "1.0.193"
default-features = false
features = ["derive"]
optional = true

[dependencies.async-fs]
version = "2.1.2"
optional = true

[features]
default = ["all"]
std = ["dep:async-fs"]
all = ["serde","std"]
serde = ["dep:serde"]
