[package]
name = "waterui-icon"
version = "0.1.0"
edition = "2024"

[dependencies]
waterui.workspace = true

[dependencies.thiserror]
version = "2.0"
optional = true
[dependencies.futures-lite]
version = "2.6"
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
optional = true

[dependencies.async-fs]
version = "2.1"
optional = true

[dependencies.toml]
version = "0.8"
optional = true

[features]
default = ["std"]
std = ["dep:thiserror","dep:futures-lite","serde","dep:async-fs","dep:toml"]
serde = ["dep:serde","waterui/serde"]
